# arduino-socket

./: .env.example  .gitignore  README.rst  pyproject.toml
arduino_socket/: app.py  main.py  settings.py  socket.py
tests/: test_arduino_socket.py
