[tool.poetry]
name = "arduino-socket"
version = "0.1.0"
description = ""
authors = ["kwalter <walterkaunda@live.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
eventlet = "^0.26.1"
Flask-Sockets = "^0.2.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
